<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="120dp"
    android:background="@drawable/dialog_forgetpwd_shape"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_forgetpwd"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forgetpwd"
        android:textColor="@color/color_00c987"
        android:textSize="@dimen/size_30" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hui_99" />

    <EditText
        android:id="@+id/edt_forgetpwd_shoujihao"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/login_shoujihao"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingLeft="10dp"
        android:textColor="@color/hui_83"
        android:textSize="@dimen/size_26" />

    <Button
        android:id="@+id/btn_forgetpwd_submit"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/btn_exitlogin_selector"
        android:gravity="center"
        android:text="@string/send_newpwd"
        android:textColor="@color/bai_ff"
        android:textSize="@dimen/size_26" />

</LinearLayout>