<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.gt.officeagent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hui_f0"
    android:orientation="vertical" >

    <com.common.ui.Topbar
        android:id="@+id/topbar_choiceagent"
        style="@style/MW.Topbar"
        app:topbarBackBg="@drawable/btn_fanhui_topbar"
        app:topbarBackMode="finish"
        app:topbarTitleText="选择代办点" >
    </com.common.ui.Topbar>

    <LinearLayout
        android:id="@+id/ll_search_agent"
        style="@style/MW"
        android:background="@color/bai_ff"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_search_agent"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext"
            android:hint="@string/search_myagent"
            android:paddingLeft="15dp"
            android:textColor="@color/hei_33"
            android:textSize="@dimen/size_28" />

        <Button
            android:id="@+id/btn_search_agent"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_search"
            android:drawableLeft="@drawable/icon_search"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/btn_search"
            android:textColor="@color/bai_ff"
            android:textSize="@dimen/size_32" />
    </LinearLayout>

     <LinearLayout
        android:id="@+id/ll_choiseagent_search"
        style="@style/MW"
        android:orientation="vertical" 
         android:visibility="gone"
        >

        <TextView
            android:id="@+id/tv_searchagent"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="17dp"
            android:background="@color/hui_f0"
            android:gravity="center_vertical"
            android:text="@string/searchagent"
            android:textColor="@color/hei_25"
            android:textSize="@dimen/size_30" />

        <ListView
            android:id="@+id/lv_choiseagent_searchagent"
            style="@style/MW" >
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_choiseagent_near"
        style="@style/MW"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_nearagent"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="17dp"
            android:background="@color/hui_f0"
            android:gravity="center_vertical"
            android:text="@string/nearagent"
            android:textColor="@color/hei_25"
            android:textSize="@dimen/size_30" />

        <ListView
            android:id="@+id/lv_choiseagent_near"
            style="@style/MW" >
        </ListView>
    </LinearLayout>

   

</LinearLayout>