<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.gt.officeagent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hui_f0"
    android:orientation="vertical" >

    <com.common.ui.Topbar
        android:id="@+id/topbar_tepwd"
        style="@style/MW.Topbar"
        app:topbarBackBg="@drawable/btn_fanhui_topbar"
        app:topbarBackMode="finish"
        app:topbarTitleText="修改密码" >
    </com.common.ui.Topbar>

    <LinearLayout
        android:id="@+id/ll_updatepwd_topLayout"
        style="@style/MW"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_updatepwd_logo"
            style="@style/WW"
            android:layout_marginTop="15dp"
            android:src="@drawable/head_moren" />

        <RelativeLayout
            android:id="@+id/rl_oldpwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@color/bai_ff" >

            <ImageView
                android:id="@+id/icon_mima"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_mima" />

            <include
                android:id="@+id/divider_oldpwd"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4.5dp"
                android:layout_marginTop="4.5dp"
                android:layout_toRightOf="@id/icon_mima"
                layout="@layout/include_short_vertical" />

            <EditText
                android:id="@+id/edt_oldpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/divider_oldpwd"
                android:background="@null"
                android:hint="@string/oldpwd"
                android:inputType="textPassword"
                android:textColor="@color/hei_33"
                android:textSize="@dimen/size_28" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_updatepwd_container"
        style="@style/MM"
        android:layout_marginTop=" 10dp" >

        <RelativeLayout
            android:id="@+id/rl_newpwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/bai_ff" >

            <ImageView
                android:id="@+id/icon_newpwd"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_mima" />

            <include
                android:id="@+id/divider_newpwd"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4.5dp"
                android:layout_marginTop="4.5dp"
                android:layout_toRightOf="@id/icon_newpwd"
                layout="@layout/include_short_vertical" />

            <EditText
                android:id="@+id/edt_newpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/divider_newpwd"
                android:background="@null"
                android:hint="@string/newpwd"
                android:inputType="textPassword"
                android:textColor="@color/hei_33"
                android:textSize="@dimen/size_28" />
        </RelativeLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="1dp"
            layout="@layout/include_line_horizontal_march" />

        <RelativeLayout
            android:id="@+id/rl_mima"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="46dp"
            android:background="@color/bai_ff" >

            <ImageView
                android:id="@+id/icon_querenpwd"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_mima" />

            <include
                android:id="@+id/divider_querenpwd"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4.5dp"
                android:layout_marginTop="4.5dp"
                android:layout_toRightOf="@id/icon_querenpwd"
                layout="@layout/include_short_vertical" />

            <EditText
                android:id="@+id/edt_querenpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/divider_querenpwd"
                android:background="@null"
                android:hint="@string/querenmima"
                android:inputType="textPassword"
                android:textColor="@color/hei_33"
                android:textSize="@dimen/size_28" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/MW"
            android:layout_marginTop="153dp" >

            <Button
                android:id="@+id/btn_submit_update"
                style="@style/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/quedingupdate" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>